<resources>
    <string name="app_name">6 nimmt</string>
    <string name="text1">text1</string>
    <string name="text2">text2</string>
    <string name="text3">text3</string>
    <string name="text4">text4</string>
    <string name="text5">text5</string>
    <string name="text6">text6</string>
    <string name="text7">text7</string>
    <string name="text8">text8</string>
    <string name="text9">text9</string>
    <string name="text10">text10</string>
    <string name="userName">Username</string>
    <string name="start_game">new game</string>
    <string name="end_game">exit</string>
    <string name="noofplayers">Enter the number of players</string>
    <string name="ok">OK</string>
    <string name="number_error">The number of players should be between 2 and 10</string>
    <string name="name_of_player">Enter name of the player</string>
    <string name="enter_names">Please Enter a unique name for each player!</string>
    <string name="next_round">Next Round</string>
    <string name="chenge_background">change the background</string>
    <string name="choose_back">choose your background</string>


</resources>
